Make it compile under older JDKs.